# tom_debugger

./: .gitignore  README.md  TODO.md  playground.ipynb  pyproject.toml  requirements.txt
benchmarks/create_full_data_code/: get_full_data_HiToM_len1.py  get_full_data_MMToM.py  get_full_data_MuMAToM.py  get_full_data_ToMi.py
benchmarks/data/: Hi-ToM_data.json
benchmarks/full_data_formatted/: BigToM_backward_belief_false_belief_stories.csv  BigToM_backward_belief_true_belief_stories.csv  BigToM_forward_action_false_belief_stories.csv  BigToM_forward_action_true_belief_stories.csv  BigToM_forward_belief_false_belief_stories.csv  BigToM_forward_belief_true_belief_stories.csv  FANToM_tom:belief:accessible_full_context_first-order.csv  FANToM_tom:belief:accessible_full_context_second-order.csv  FANToM_tom:belief:accessible_short_context_first-order.csv  FANToM_tom:belief:accessible_short_context_second-order.csv  FANToM_tom:belief:inaccessible_full_context_second-order.csv  FANToM_tom:belief:inaccessible_short_context_first-order.csv  FANToM_tom:belief:inaccessible_short_context_second-order.csv  HiToM_len1_no_tell_0.csv  HiToM_len1_no_tell_1.csv  HiToM_len1_no_tell_2.csv  HiToM_len1_no_tell_3.csv  HiToM_len1_no_tell_4.csv  HiToM_len1_tell_0.csv  HiToM_len1_tell_1.csv  HiToM_len1_tell_2.csv  HiToM_len1_tell_3.csv  HiToM_len1_tell_4.csv  (+7 more)
model/: BayesianInference.py  DataLoader.py  ElementExtractor.py  Nested.py  NodeResultTracker.py  ProbSolver.py  ProblemParser.py  Timeline.py  TimestepInference.py  evaluate.py  model_adjustment.py  probs.py  test.py  utils.py
(+58 files in other folders)
