[project]
name = "tom-debugger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "openai>=1.107.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pip>=25.2",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
